nullaway_error_F2DB46A2-25E6-4872-9619-865838D9223C.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/codec/multipart/MultipartParser.java:120: error: [NullAway] dereferenced expression this.state.get() is @Nullable
		this.state.get().onNext(value);
		                ^
    (see http://t.uber.com/nullaway )
